all: README file and etc change.
- fix lib/etc/Makefile.am bug.
- disable etc installation by default (to support user-mode installation)
- add top-directory README file.

Change-Id: Ia2b8b86348d80d226217ab1c5c3761f25174ce25

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -12,6 +12,7 @@ AC_PROG_CC()
 AC_PROG_CXX()
 AM_PROG_CC_C_O()
 
+OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
 dnl Swig stuffs
 OPTION_DEFAULT_ENABLE([swig], [ENABLE_SWIG])
 if test -z "$ENABLE_SWIG_TRUE"
