--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -1,5 +1,8 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src etc
+SUBDIRS = src
+if ENABLE_ETC
+SUBDIRS += etc
+endif
 LDMS = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
 LDMS_TARBALL = $(LDMS).tar.gz
 OPV=-$(PACKAGE_VERSION)
