--- a/ocm/configure.ac
+++ b/ocm/configure.ac
@@ -22,6 +22,8 @@ AC_C_CONST
 
 OPTION_WITH_EVENT
 
+OPTION_DEFAULT_DISABLE([etc], [ENABLE_ETC])
+
 OPTION_DEFAULT_ENABLE([ovis-lib], [ENABLE_OVIS_LIB])
 OPTION_WITH([ovis-lib], [OVIS_LIB])
 
