--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,8 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src etc
+SUBDIRS = src
+if ENABLE_ETC
+SUBDIRS += etc
+endif
 if ENABLE_SWIG
 SUBDIRS += swig
 endif
