SOS: Fix issue with removal of objects with duplicate keys
- Add an obj_iter_key_del interface to delete a key at the current iterator
  position. This allows SOS to have multiple records with the same key.
- Change subsequent files that got affected by the change of the interface

Change-Id: I1bc00c3fd09dad79ffa0b0bcc0aad8062160a993

--- a/sos/src/Makefile.am
+++ b/sos/src/Makefile.am
@@ -3,6 +3,7 @@ INCLUDES = @OVIS_LIB_INCDIR_FLAG@
 sbin_PROGRAMS = \
 	bpt_test \
 	sos \
+	sos_test \
 	sos_rate \
 	sos_stat \
 	sos_query \
@@ -130,6 +131,10 @@ sos_LDADD = \
 	liboidx.la \
 	libods.la \
 	-lcoll
+
+sos_test_SOURCES = sos_test.c
+sos_test_LDADD = \
+		 libsos.la
 
 sos_rate_SOURCES = sos_rate.c
 sos_rate_LDADD = \
