lib and ldms: Disable doc by default.
Change-Id: I1524a3d96f386369483d92524ee58869c0201355

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -30,6 +30,9 @@ OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
 OPTION_DEFAULT_ENABLE([glib], [ENABLE_GLIB])
 OPTION_DEFAULT_DISABLE([yaml], [ENABLE_YAML])
 OPTION_DEFAULT_DISABLE([authentication], [ENABLE_AUTHENTICATION])
+OPTION_DEFAULT_DISABLE([authdebug], [ENABLE_AUTHDEBUG])
+OPTION_DEFAULT_DISABLE([use-tf], [ENABLE_USE_TF])
+OPTION_DEFAULT_DISABLE([doc], [ENABLE_DOC])
 
 dnl Options for transport
 OPTION_DEFAULT_ENABLE([xprt], [ENABLE_XPRT])
