--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "util/libevent"]
 	path = util/libevent
-	url = git://hekili.ca.sandia.gov/git-ovis/repositories/levent.git
+	url = https://github.com/libevent/libevent.git
