init & set-ovis-variables.sh: Give the memory size pre-allocated by aggregator
- Added -m when execute ldmsd
- Added LDMSD_AGG_MEM as the environment variable for the value of the memory
  size to be preallocated by aggregator

Change-Id: I29bdc2e5fdfd7677c849d4e266716881e868f4c7

--- a/ldms/etc/init.d/ldmsd_aggregator.in
+++ b/ldms/etc/init.d/ldmsd_aggregator.in
@@ -60,7 +60,7 @@ mkdir -p $OVIS_HOME/var/log/
 start() {
 	echo -n "Starting $prog: "
 
-	$LDMSD_AGG -l $OVIS_HOME/var/log/ldmsd_aggregator.log -S $OVIS_HOME/var/sock/ldmsd_aggregator.ctrl -x $LDMSD_AGG_XPORT:$LDMSD_AGG_PORT_LISTEN -o $LDMSD_AGG_PORT_TO_OCMD -z ldmsd_aggregator
+	$LDMSD_AGG -l $OVIS_HOME/var/log/ldmsd_aggregator.log -S $OVIS_HOME/var/sock/ldmsd_aggregator.ctrl -x $LDMSD_AGG_XPORT:$LDMSD_AGG_PORT_LISTEN -m $LDMSD_AGG_MEM -o $LDMSD_AGG_PORT_TO_OCMD -z ldmsd_aggregator
 
 	RETVAL=$?
 	if [ $RETVAL -eq 0 ] ; then
