--- a/lib/etc/ovis/set-ovis-variables.sh.in
+++ b/lib/etc/ovis/set-ovis-variables.sh.in
@@ -32,6 +32,7 @@ export KOMONDOR_PORT_LISTEN=55555
 export LDMSD_AGG_XPORT=sock
 export LDMSD_AGG_PORT_TO_OCMD=40002
 export LDMSD_AGG_PORT_LISTEN=50002
+export LDMSD_AGG_MEM="2G"
 
 export BALER_XPORT=sock
 export BALER_PORT_TO_OCMD=42001
