all: Make init start-up scripts chkconfig compatable.
Make init start-up scripts chkconfig compatable by adding metadata in
the comments.

Change-Id: I20105815d47184f5c2707e1064b63fd4a77c1e2e

--- a/baler/etc/init.d/balerd.in
+++ b/baler/etc/init.d/balerd.in
@@ -1,5 +1,20 @@
 #!/bin/sh
 #
+#
+# balerd        This shell script takes care of starting and stopping
+#               balerd (ovis log analysis daemon).
+#
+# chkconfig: - 98 0
+# description: balerd is an ovis daemon.
+#
+### BEGIN INIT INFO
+# Provides: balerd
+# Required-Start:
+# Defalt-Start: 2 3 4 5
+# Default-Stop: 0 1 6
+# Description: balerd init script
+### END INIT INFO
+
 
 . /etc/profile.d/set-ovis-variables.sh
 . /etc/ovis/ovis-functions.sh
