--- a/komondor/etc/init.d/komondor.in
+++ b/komondor/etc/init.d/komondor.in
@@ -1,5 +1,20 @@
 #!/bin/sh
 #
+#
+# komondor      This shell script takes care of starting and stopping
+#               komondor (ovis daemon).
+#
+# chkconfig: - 98 0
+# description: komondor is an ovis daemon.
+#
+### BEGIN INIT INFO
+# Provides: komondor
+# Required-Start:
+# Defalt-Start: 2 3 4 5
+# Default-Stop: 0 1 6
+# Description: komondor init script
+### END INIT INFO
+
 
 . /etc/profile.d/set-ovis-variables.sh
 . /etc/ovis/ovis-functions.sh
