--- a/ldms/etc/init.d/ldmsd_aggregator.in
+++ b/ldms/etc/init.d/ldmsd_aggregator.in
@@ -1,5 +1,20 @@
 #!/bin/sh
 #
+#
+# ldmsd_aggregator This shell script takes care of starting and stopping
+#                  ldmsd_aggregator (ovis data collection daemon).
+#
+# chkconfig: - 98 0
+# description: ldmsd_aggregator is an ovis daemon.
+#
+### BEGIN INIT INFO
+# Provides: ldmsd_aggregator
+# Required-Start:
+# Defalt-Start: 2 3 4 5
+# Default-Stop: 0 1 6
+# Description: ldmsd_aggregator init script
+### END INIT INFO
+
 
 . /etc/profile.d/set-ovis-variables.sh
 . /etc/ovis/ovis-functions.sh
