--- a/me/etc/init.d/me.in
+++ b/me/etc/init.d/me.in
@@ -1,5 +1,20 @@
 #!/bin/sh
 #
+#
+# me    This shell script takes care of starting and stopping
+#       me (ovis model engine daemon).
+#
+# chkconfig: - 98 0
+# description: me is an ovis daemon.
+#
+### BEGIN INIT INFO
+# Provides: me
+# Required-Start:
+# Defalt-Start: 2 3 4 5
+# Default-Stop: 0 1 6
+# Description: me init script
+### END INIT INFO
+
 
 . /etc/profile.d/set-ovis-variables.sh
 . /etc/ovis/ovis-functions.sh
