--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -297,6 +297,8 @@ OPTION_WITH_PORT([LDMSD],[411])
 
 OPTION_WITH_MAGIC([LDMS_MSG_MAX],[32768],[Maximum control message length allowed to ldmsd (min 4095)])
 
+OPTION_GITINFO
+
 
 AC_SUBST(ac_configure_args)
 AC_SUBST(configure_input)
