LDMS: store. New derived store

--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -38,4 +38,9 @@ libstore_csv_la_SOURCES = store_csv.c
 libstore_csv_la_CFLAGS = $(AM_CFLAGS)
 libstore_csv_la_LIBADD = $(STORE_LIBADD)
 lib_LTLIBRARIES += libstore_csv.la
+
+libstore_derived_csv_la_SOURCES = store_derived_csv.c
+libstore_derived_csv_la_CFLAGS = $(AM_CFLAGS)
+libstore_derived_csv_la_LIBADD = $(STORE_LIBADD)
+lib_LTLIBRARIES += libstore_derived_csv.la
 endif
