lib: python path correction.
PYTHON_PATH in set-ovis-environment.sh was pointing at python2.7. This change
will make it point to a correct version of python on the building machine.

Change-Id: I537f5e87070d61f91ad21ab5fb47330780524914

--- a/lib/etc/ovis/set-ovis-variables.sh.in
+++ b/lib/etc/ovis/set-ovis-variables.sh.in
@@ -10,7 +10,7 @@ export LDMS_XPRT_LIBPATH=$OLIB
 export ZAP_LIBPATH=$OLIB
 export ME_PLUGIN_LIBPATH=$OLIB/me
 
-export PYTHONPATH=$PYTHONPATH:$OVIS_HOME/lib/python2.7/site-packages
+export PYTHONPATH=$PYTHONPATH:$OVIS_HOME/lib/python@PYTHON_VERSION@/site-packages
 export PATH=$PATH:$OVIS_HOME/bin:$OVIS_HOME/sbin
 
 export LDMSD_SAMPLER_XPORT=sock
