all: undefined reference fix.
Previously, when OVIS libraries are built, there might be some missing
references and the make will just be quiet. When I tried building the libraries
with CFLAGS='-Wl,-z,defs' (disallow missing references -- for safety), there
will be a lot of errors due to missing references. This change fix the missing
references by providing appropriate dependencies (-lXXX) in Makefile.am's.

Change-Id: I726c7d354b9dbbcf5b62b1a3942d59ca51ef2205

--- a/baler/src/baler/Makefile.am
+++ b/baler/src/baler/Makefile.am
@@ -21,7 +21,7 @@ lib_LTLIBRARIES += libbmvec.la
 
 # Virtual-memory unordered_map
 libbmapper_la_SOURCES = bmapper.c
-libbmapper_la_LIBADD = libbutils.la libbmem.la
+libbmapper_la_LIBADD = libbutils.la libbmem.la libbmvec.la
 lib_LTLIBRARIES += libbmapper.la
 
 # Convenient set implementation utility.
