--- a/komondor/src/store/Makefile.am
+++ b/komondor/src/store/Makefile.am
@@ -5,5 +5,5 @@ lib_LTLIBRARIES =
 
 libkstore_default_la_SOURCES = kstore_default.c
 libkstore_default_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libkstore_default_la_LIBADD = -lsos -lovis_util @SOS_LIBDIR_FLAG@
+libkstore_default_la_LIBADD = -lsos -lobjidx -lovis_util @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libkstore_default.la
