sos: BLOB and STRING update
- Fix SOS STRING bug
- Change BLOB to share ODS (instead of having its own ODS)
- Modify the affected modules (e.g. baler)
- A hack to prevent possible re-map problem when assigning STRING or BLOB

Change-Id: I3b3757fd9530ec08f3cb29c81aedd4b0c8b53905

--- a/baler/src/plugins/Makefile.am
+++ b/baler/src/plugins/Makefile.am
@@ -16,6 +16,7 @@ libbout_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 libbout_sos_la_LIBADD = ../baler/libbutils.la -lsos ../baler/libbaler.la \
 			-lpthread \
 			-lobjidx \
+			-lods \
 			@SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos.la
 
@@ -25,6 +26,7 @@ libbout_sos_img_la_LIBADD = ../baler/libbutils.la ../baler/libbaler.la \
 			    libbout_sos.la \
 			    -lpthread \
 			    -lobjidx \
+			    -lods \
 			    -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_img.la
 
@@ -34,6 +36,7 @@ libbout_sos_msg_la_LIBADD = ../baler/libbutils.la ../baler/libbaler.la \
 			    libbout_sos.la \
 			    -lpthread \
 			    -lobjidx \
+			    -lods \
 			    -lsos @SOS_LIBDIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_msg.la
 
