ldms: init script bugfix
Fix bug in ldmsd_sampler and ldmsd_agregator init scripts (in stop path).

Change-Id: I7e4e4f27a31e648f511c5df4c564eec30519c460

--- a/ldms/etc/init.d/ldmsd_aggregator.in
+++ b/ldms/etc/init.d/ldmsd_aggregator.in
@@ -98,7 +98,7 @@ start() {
 stop() {
 	if [ -f $pidfile ]; then
 		pid=`cat $pidfile`
-	elif [ ! -z `pgrep -f ldmsd_sampler` ]; then
+	else
 		echo "pidfile of $pidfile doesn't exists, using ps"
 		pid=`ps -C ldmsd -opid,cmd | grep ldmsd_aggregator | sed 's/ *\([0-9]\+\) .*/\1/'`
 	fi
