Fixed ldlibrarypath assignment in test scripts.

--- a/ldms/scripts/ldms_local_clocktest.sh.in
+++ b/ldms/scripts/ldms_local_clocktest.sh.in
@@ -39,7 +39,7 @@ export LDMSD_SOCKPATH=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_SOCKPATH
 echo "logs and data stored under $TESTDIR"
 
-export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libeventpath@
+export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libeventpath@:$LD_LIBRARY_PATH
 export LDMS_XPRT_LIBPATH=${BUILDDIR}/lib
 export PATH=${BUILDDIR}/sbin:$PATH
 export LDMSD_PLUGIN_LIBPATH=${BUILDDIR}/lib
