--- a/ldms/scripts/envldms.sh.in
+++ b/ldms/scripts/envldms.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 BUILDDIR=@prefix@
 export PATH=${BUILDDIR}/sbin:$PATH
-export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libeventpath@
+export LD_LIBRARY_PATH=${BUILDDIR}/lib:@libeventpath@:$LD_LIBRARY_PATH
 export LDMS_XPRT_LIBPATH=${BUILDDIR}/lib
 export LDMSD_PLUGIN_LIBPATH=${BUILDDIR}/lib
 
