Added vg test script and fixed Makefile.am reversions.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -317,10 +317,12 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 scripts/envldms.sh
 		 scripts/ldms_usertest.sh
 		 scripts/ldms_local_usertest.sh
+		 scripts/ldms_local_valgrind.sh
 		 scripts/ldms_local_clocktest.sh
 		 ldms.spec],[
 		if test -f scripts/ldms_usertest.sh; then chmod a+x scripts/ldms_usertest.sh; fi
 		if test -f scripts/ldms_local_usertest.sh; then chmod a+x scripts/ldms_local_usertest.sh; fi
+		if test -f scripts/ldms_local_valgrind.sh; then chmod a+x scripts/ldms_local_valgrind.sh; fi
 		if test -f scripts/ldms_local_clocktest.sh; then chmod a+x scripts/ldms_local_clocktest.sh; fi
 		])
 AC_OUTPUT
