--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -1,4 +1,4 @@
 
 # consider adding ldmsd to bin_SCRIPTS if ldmsd script ever stabilizes
-bin_SCRIPTS= envldms.sh ldms_local_clocktest.sh ldms_local_usertest.sh ldms_usertest.sh
+bin_SCRIPTS= envldms.sh ldms_local_clocktest.sh ldms_local_usertest.sh ldms_usertest.sh ldms_local_valgrind.sh
 CLEANFILES = $(bin_SCRIPTS)
