ocm: init script fix
- Add 'mkdir -p' for the var/log directory.

Change-Id: I04c51b9905a04188c368f33be27da16ce6f981d1

--- a/ocm/etc/init.d/ocmd.in
+++ b/ocm/etc/init.d/ocmd.in
@@ -79,6 +79,7 @@ pidfile=$OVIS_HOME/var/pid/$prog.pid
 
 mkdir -p $(dirname $lockfile)
 mkdir -p $(dirname $pidfile)
+mkdir -p $OVIS_HOME/var/log
 
 status -p $pidfile -l $(basename $lockfile) master >/dev/null 2>&1
 running=$?
