BUG: fixed pointing outside of source for lib/ headers
Mis-ordering of include flags for libevent could cause
old build to search a prior ldms install's headers rather
than in the current source tree being built. This appeared
as a bug (decl mismatch) in rbt. This patch fixes it by
putting the libevent include flags into the control of
Makefile.am's.

--- a/ldms/src/xprt/Makefile.am
+++ b/ldms/src/xprt/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES =
 
 CORE = ../core
-INCLUDES = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@ 
+INCLUDES = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@ @LIBEVENT_INCDIR_FLAG@
 AM_CFLAGS = $(INCLUDES)
 
 if ENABLE_SOCK
