ENH: updated rpm packaging (combined). now v2.1.
BUG: disable-sos now works correctly
BUG: disable-zap now works correctly
BUG: disable-doc now works correctly with rpm build.
ENH: rpm build now provides only ldms and lib, since sos is not used
for ldms currently.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -37,6 +37,10 @@ install-data-local: doxygen
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
 	done
+else
+doxygen doxygen/html:
+	mkdir -p doxygen/html
+	echo "Documentation suppressed by configure options" > doxygen/html/README.txt
 endif
 
 clean-local: rpm-clean
