--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.63)
 dnl AC_C_BIGENDIAN is broken in several versions before 2.63
-AC_INIT(ovis-sos, 2.0.0, ovis-help@sandia.gov)
+AC_INIT(ovis-sos, 2.1.0, ovis-help@sandia.gov)
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/sos.h])
 AC_CONFIG_AUX_DIR(config)
@@ -28,6 +28,7 @@ AM_PATH_PYTHON(2.6)
 AC_PROG_SWIG
 SWIG_PYTHON
 fi
+OPTION_DEFAULT_DISABLE([doc], [ENABLE_DOC])
 
 dnl Check host byte order
 AC_C_BIGENDIAN(
