--- a/komondor/etc/init.d/komondor.in
+++ b/komondor/etc/init.d/komondor.in
@@ -79,6 +79,15 @@ start() {
 	echo -n "Starting $prog: "
 	mkdir -p $OVIS_DATA/act_sos
 
+	# Check running instance
+	pid=`get_pid $KOMONDOR`
+	if [ $pid ] ; then
+		echo -n "Komondor is already running: "
+		echo_failure
+		echo
+		exit 1
+	fi
+
 	$KOMONDOR -a $OVIS_DATA/act_sos/act -x $KOMONDOR_XPORT -p $KOMONDOR_PORT_LISTEN -z $KOMONDOR_PORT_TO_OCMD -l $OVIS_HOME/var/log/komondor.log
 
 	RETVAL=$?
@@ -100,6 +109,7 @@ start() {
 }
 
 stop() {
+	echo -n "Stopping $prog: "
 	if [ -f $pidfile ]; then
 		pid=`cat $pidfile`
 	else
@@ -111,7 +121,7 @@ stop() {
 		echo "Cannot obtain pid ..."
 		echo_failure
 		echo
-		return -1
+		exit 1
 	else
 		kill $pid
 	fi
