--- a/ldms/etc/init.d/ldmsd_sampler.in
+++ b/ldms/etc/init.d/ldmsd_sampler.in
@@ -72,11 +72,23 @@ mkdir -p $(dirname $lockfile)
 mkdir -p $(dirname $pidfile)
 mkdir -p $OVIS_HOME/var/sock/
 mkdir -p $OVIS_HOME/var/log/
+LOG=$OVIS_HOME/var/log/ldmsd_sampler.log
+SOCK=$OVIS_HOME/var/sock/ldmsd_sampler.sock
 
 start() {
 	echo -n "Starting $prog: "
+	pid=`ps -C ldmsd -opid,cmd | grep ldmsd_sampler | sed 's/ *\([0-9]\+\) .*/\1/'`
 
-	$LDMSD_SAMPLER -l $OVIS_HOME/var/log/ldmsd_sampler.log -S $OVIS_HOME/var/sock/ldmsd_sampler.sock -x $LDMSD_SAMPLER_XPORT:$LDMSD_SAMPLER_PORT_LISTEN -o $LDMSD_SAMPLER_PORT_TO_OCMD -z ldmsd_sampler
+	if [ $pid ]; then
+		echo -n "ldmsd_sampler is already running: "
+		echo_failure
+		echo
+		exit 1
+	fi
+
+	rm -f $SOCK
+
+	$LDMSD_SAMPLER -l $LOG -S $SOCK -x $LDMSD_SAMPLER_XPORT:$LDMSD_SAMPLER_PORT_LISTEN -o $LDMSD_SAMPLER_PORT_TO_OCMD -z ldmsd_sampler
 
 	RETVAL=$?
 	if [ $RETVAL -eq 0 ] ; then
@@ -97,6 +109,7 @@ start() {
 }
 
 stop() {
+	echo -n "Stopping $prog: "
 	if [ -f $pidfile ]; then
 		pid=`cat $pidfile`
 	else
