--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -7,12 +7,14 @@ lib_LTLIBRARIES =
 
 AM_CFLAGS = -Wall $(DBGFLAGS) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@ @LIBEVENT_INCDIR_FLAG@
 AM_CPPFLAGS = -DSYSCONFDIR='"$(sysconfdir)"' -DPLUGINDIR='"$(libdir)"'
+AM_CFLAGS += \
+"-DLDMS_SRCDIR=\"$(abs_top_srcdir)\"" \
+"-DLDMS_BUILDDIR=\"$(abs_top_builddir)\""
 
 ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ldms_auth.h ldms_xprt_cmd.h
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h ldms_auth.c
-libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc -lcoll -lrt
 lib_LTLIBRARIES += libldms.la
