all: commit-id script
This changeset modify Makefile.am in each sub project to install a script to
obtain the commit-id of the source that it is built of. If some of the tracked
files are modified, '-dirty' is appended at the end of the commit-id.

Change-Id: I0c15529404698bfee16a3d019ac9ad5335578b80

--- a/komondor/Makefile.am
+++ b/komondor/Makefile.am
@@ -4,3 +4,13 @@ if ENABLE_ETC
 SUBDIRS += etc
 endif
 
+install-exec-local:
+	COMMIT=`git rev-parse HEAD`; \
+	DIRTY=`git status -uno -s | wc -l`; \
+	if [[ $$DIRTY != 0 ]]; then \
+		COMMIT="$$COMMIT-dirty" ; \
+	fi ; \
+	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/komondor-commit-id ; \
+	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/komondor-commit-id ; \
+	chmod 555 $(DESTDIR)/$(bindir)/komondor-commit-id ;
+
