--- a/sos/Makefile.am
+++ b/sos/Makefile.am
@@ -42,5 +42,15 @@ install-data-local: doxygen
 	done
 endif
 
+install-exec-local:
+	COMMIT=`git rev-parse HEAD`; \
+	DIRTY=`git status -uno -s | wc -l`; \
+	if [[ $$DIRTY != 0 ]]; then \
+		COMMIT="$$COMMIT-dirty" ; \
+	fi ; \
+	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/sos-commit-id ; \
+	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/sos-commit-id ; \
+	chmod 555 $(DESTDIR)/$(bindir)/sos-commit-id ;
+
 clean-local: rpm-clean
 
