--- a/me/Makefile.am
+++ b/me/Makefile.am
@@ -17,4 +17,14 @@ rpm-clean:
 	rm -rf rpm/
 	rm -f $(ME_TARBALL)
 
+install-exec-local:
+	COMMIT=`git rev-parse HEAD`; \
+	DIRTY=`git status -uno -s | wc -l`; \
+	if [[ $$DIRTY != 0 ]]; then \
+		COMMIT="$$COMMIT-dirty" ; \
+	fi ; \
+	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/me-commit-id ; \
+	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/me-commit-id ; \
+	chmod 555 $(DESTDIR)/$(bindir)/me-commit-id ;
+
 clean-local: rpm-clean
