--- a/ocm/Makefile.am
+++ b/ocm/Makefile.am
@@ -4,3 +4,13 @@ if ENABLE_ETC
 SUBDIRS += etc
 endif
 
+install-exec-local:
+	COMMIT=`git rev-parse HEAD`; \
+	DIRTY=`git status -uno -s | wc -l`; \
+	if [[ $$DIRTY != 0 ]]; then \
+		COMMIT="$$COMMIT-dirty" ; \
+	fi ; \
+	echo '#!/bin/bash' > $(DESTDIR)/$(bindir)/ocm-commit-id ; \
+	echo echo $$COMMIT >> $(DESTDIR)/$(bindir)/ocm-commit-id ; \
+	chmod 555 $(DESTDIR)/$(bindir)/ocm-commit-id ;
+
