ovis: log files management
The old log files are of the format <service name>.log.N, where N is 0, 1, ...,
5. *.log.5 is the oldest log file kept for a service. For example,
ldmsd_sampler.log, ldmsd_sampler.log.0, ..., ldmsd_sampler.log.5.

Change-Id: I78096aa767ff658c400cb157a74c3fed7113edbd

--- a/baler/etc/init.d/balerd.in
+++ b/baler/etc/init.d/balerd.in
@@ -87,6 +87,7 @@ mkdir -p $(dirname $lockfile)
 mkdir -p $(dirname $pidfile)
 mkdir -p $OVIS_HOME/var/sock/
 mkdir -p $OVIS_HOME/var/log/
+LOG=$OVIS_RUN/var/log/balerd.log
 
 start() {
 	echo -n "Starting $prog: "
@@ -99,7 +100,9 @@ start() {
 		exit 1
 	fi
 
-	$BALER -l $OVIS_HOME/var/log/balerd.log -s $BALER_STORE -z $BALER_PORT_TO_OCMD
+	archive_log $LOG
+
+	$BALER -l $LOG -s $BALER_STORE -z $BALER_PORT_TO_OCMD
 
 	RETVAL=$?
 	if [ $RETVAL -eq 0 ] ; then
