ENH: Added 'banned' target to ldms and top makes.
'make banned' tells you where functions banned in
ldms/scripts/ldms_ban.sh.in are found. It is
executed also after a successful install.
This should help us ensure strtok and other unsafe or deprecated
calls do not linger across merges and reversions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,9 @@ OPV=-$(PACKAGE_VERSION)
 
 .PHONY: rpm centos toss doxygen 
 
+banned:
+	(cd ldms; make banned)
+
 rpm centos: dist-gzip
 	mkdir -p centos/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
 	cp $(BASE_TARBALL) packaging/ovis-base.spec centos/SOURCES
