--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -318,11 +318,13 @@ AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
 		 Doxyfile
 		 scripts/ldmsd
 		 scripts/envldms.sh
+		 scripts/ldms_ban.sh
 		 scripts/ldms_usertest.sh
 		 scripts/ldms_local_usertest.sh
 		 scripts/ldms_local_valgrind.sh
 		 scripts/ldms_local_clocktest.sh
 		 ldms.spec],[
+		if test -f scripts/ldms_ban.sh.in; then chmod a+x scripts/ldms_ban.sh.in; fi
 		if test -f scripts/ldms_usertest.sh; then chmod a+x scripts/ldms_usertest.sh; fi
 		if test -f scripts/ldms_local_usertest.sh; then chmod a+x scripts/ldms_local_usertest.sh; fi
 		if test -f scripts/ldms_local_valgrind.sh; then chmod a+x scripts/ldms_local_valgrind.sh; fi
