baler: fix the log file path in the baler init script
Change-Id: Ifbc7aef78c9bc2ea55ce1b28eb4c10bd2594bb98

--- a/baler/etc/init.d/balerd.in
+++ b/baler/etc/init.d/balerd.in
@@ -87,7 +87,7 @@ mkdir -p $(dirname $lockfile)
 mkdir -p $(dirname $pidfile)
 mkdir -p $OVIS_HOME/var/sock/
 mkdir -p $OVIS_HOME/var/log/
-LOG=$OVIS_RUN/var/log/balerd.log
+LOG=$OVIS_HOME/var/log/balerd.log
 
 start() {
 	echo -n "Starting $prog: "
